<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
	xmlns:android="http://schemas.android.com/apk/res/android"
	android:layout_width="match_parent"
	android:layout_height="match_parent"
	android:orientation="vertical"
	android:weightSum="4.3">

	<TextView
		android:id="@+id/txtInstruction"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:layout_gravity="center_horizontal"
		android:text="@string/instruction"
		style="@style/title"
		android:layout_weight=".1"/>

	<DigitalClock
		android:id="@+id/digitalClock1"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:layout_gravity="center"
		android:text="DigitalClock"
		android:layout_weight=".1"/>

	<ScrollView
		android:layout_width="match_parent"
		android:layout_height="match_parent"
		android:layout_weight="4"
		android:layout_margin="5dp">

		<LinearLayout
			android:orientation="vertical"
			android:layout_width="match_parent"
			android:layout_height="wrap_content" >

			<TextView
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:text="@string/helpText1"
				style="@style/smallText"
				android:layout_margin="10dp"/>
			<TextView
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:text="@string/helpText2"
				style="@style/smallText"
				android:layout_margin="10dp"/>
			<TextView
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:text="@string/helpText3"
				style="@style/smallText"
				android:layout_margin="10dp"/>

			<TextView
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:text="@string/helpText4"
				style="@style/smallText"
				android:layout_margin="10dp"/>

            <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/helpText5"
                    style="@style/smallText"
                    android:layout_margin="10dp"/>


		</LinearLayout>

	</ScrollView>

	<Button
		android:id="@+id/btnStartTest"
		android:layout_width="120dp"
	    android:layout_height="wrap_content"
	    android:text="Start Test"
		android:layout_margin="5dp"
		android:layout_gravity="center"
		android:layout_weight=".1"/>

</LinearLayout>